fix overflow

--- a/src/styles/blocks/beer.sass
+++ b/src/styles/blocks/beer.sass
@@ -17,6 +17,9 @@
       width: 100%
       max-width: 1280px
       justify-content: space-between
+      @media (max-width: 700px)
+        grid-template-columns: 110px  40px
+
     &-accent
       @include inter-semi-bold
       @include link-reset
