--- a/src/styles/blocks/footer.sass
+++ b/src/styles/blocks/footer.sass
@@ -1,4 +1,7 @@
 .footer
+  display: flex
+  justify-content: center
+  align-items: center
   &__logo
     display: grid
     grid-template-columns: 113px 153px
