--- a/src/styles/blocks/sign-up.sass
+++ b/src/styles/blocks/sign-up.sass
@@ -110,3 +110,7 @@
     &--opened
       bottom: -20px
       color: red
+
+  &__image
+    width: 100%
+    height: auto
